test/tests/errors/error-record-initially-unbound.sm
// true
// false
/**/
/**/

program {
    record person(name, age);
    output person.age;
}